data/derived/fa15/progs/unify/prog0051.ml.out
Characters 61-62:
  if n < 10 then n else
                 ^
Error: This expression has type int but an expression was expected of type
         'a list
